@@ -6,6 +6,10 @@ Bug Fixes
 - Fixed c<motion and d<motion> exception if the motion was invalid.
 - The use of : and / commands now uses a different type of window for text
   entry. This fixes the focus problem that has existed since Idea 4.0.
+- Fixed word motion on strings such as 1/2/3.
+- Fixed <count><word motion> which didn't always match doing <count>
+  independent <word motion> commands.
+- Fixed <count>cw on strings such as 1/2/3.
 
 0.7.0 to 0.7.1
 
